2009-04-27 Braden McDaniel  <braden@endoframe.com>

	* AUTHORS: Removed reference to GIF copyright; OpenVRML hasn't
	supported GIF for some years.

2009-04-21 Braden McDaniel  <braden@endoframe.com>

	Apply the nonvirtual interface idiom to openvrml::node::modified.

	* src/libopenvrml/openvrml/node.cpp
	(openvrml::node::modified(bool)): Added exception specification
	noting that boost::thread_resource_error can be thrown; call
	do_modified.
	(openvrml::node::do_modified() const): Added function; this base
	class implementation always returns false.
	* src/libopenvrml/openvrml/node.h
	(openvrml::node): Made modified function nonvirtual; added private
	virtual function do_modified.
	* src/node/vrml97/abstract_indexed_set.h
	(openvrml_node_vrml97::abstract_indexed_set<Derived>): Override
	do_modified instead of modified.
	* src/node/vrml97/appearance.cpp
	(appearance): Override do_modified instead of modified.
	* src/node/vrml97/cad_layer.cpp
	(cad_layer): Override do_modified instead of modified.
	* src/node/vrml97/collision.cpp
	(collision): Override do_modified instead of modified.
	* src/node/vrml97/elevation_grid.cpp
	(elevation_grid): Override do_modified instead of modified.
	* src/node/vrml97/grouping_node_base.h
	(openvrml_node_vrml97::grouping_node_base<Derived>): Override
	do_modified instead of modified.
	* src/node/vrml97/indexed_face_set.cpp
	(indexed_face_set): Override do_modified instead of modified.
	* src/node/vrml97/lod.cpp
	(lod): Override do_modified instead of modified.
	* src/node/vrml97/point_set.cpp
	(point_set): Override do_modified instead of modified.
	* src/node/vrml97/shape.cpp
	(shape): Override do_modified instead of modified.
	* src/node/vrml97/switch.cpp
	(switch): Override do_modified instead of modified.
	* src/node/vrml97/text.cpp
	(text): Override do_modified instead of modified.
	* src/node/x3d-cad-geometry/cad_face.cpp
	(cad_face): Override do_modified instead of modified.
	* src/node/x3d-cad-geometry/indexed_quad_set.cpp